...

class _HomeScreenState extends State<HomeScreen> {
  int counter = 0;
  final TextEditingController _controller = TextEditingController();
  String? errorText;

  List<String> items = ['Apple', 'Banana', 'Orange'];

  void _incrementCounter() {
    setState(() {
      counter++;
    });
  }
...
